...
                                    <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ife-wj-rQY">
                                        <rect key="frame" x="349" y="5" width="50" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="bTl-F3-dEM"/>
                                            <constraint firstAttribute="width" constant="50" id="cHs-b3-094"/>
                                        </constraints>
                                        <state key="normal" image="send"/>
                                        <connections>
                                            <action selector="btnSendCLK:" destination="5HH-1X-dvw" eventType="touchUpInside" id="WM2-jt-oe6"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
                                <rect key="frame" x="138.5" y="425" width="137" height="46"/>
                                <color key="backgroundColor" systemColor="linkColor"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="137" id="uod-ac-VOd"/>
                                    <constraint firstAttribute="height" constant="46" id="urb-Dk-GFZ"/>
                                </constraints>
                                <state key="normal" title="JOIN"/>
                                <connections>
                                    <action selector="btnJoinCLK:" destination="xPE-cl-sqa" eventType="touchUpInside" id="84T-OL-9d4"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="lmV-Bt-wQC"/>
...
